yaml/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: circuit
  namespace: default
spec:
  hosts: ["app.<DOMAIN>"]
  #hosts: ["app.thindexed.personal.shoot.canary.k8s-hana.ondemand.com"]
  gateways: [ "gateway-app" ]
  http:
    - match:
      - uri:
          exact: "/circuit"
      redirect:
        uri: "/circuit/"
    - match:
      - uri:
          prefix: "/circuit/"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: circuit
